[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://scenes/hud/pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/hud/levelComplete.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/hud/playerDied.tscn" type="PackedScene" id=4]

[node name="hud" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="pause" parent="." instance=ExtResource( 2 )]
visible = false

[node name="levelComplete" parent="." instance=ExtResource( 3 )]
visible = false

[node name="playerDied" parent="." instance=ExtResource( 4 )]
visible = false

[node name="keyDebounceTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="keyDebounceTimer" to="." method="_on_keyDebounceTimer_timeout"]
